<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context="com.example.thelkl321.angrymooseandroid.MainActivity"
    android:id="@+id/mainLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <!-- TODO: Replace the text with a custom made image -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="7"
            android:gravity="center"
            android:lineSpacingMultiplier="0.8"
            android:text="ANGRY\nMOOSE"
            android:textColor="@color/colorText"
            android:textSize="70sp"
            android:textStyle="bold" />

        <!-- TODO: Customize buttons -->
        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:onClick="playPressed"
            android:text="PLAY" />

        <Button
            android:id="@+id/optionsButton"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:onClick="optionsPressed"
            android:text="OPTIONS" />

        <Button
            android:id="@+id/creditsButton"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:onClick="creditsPressed"
            android:text="CREDITS" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:onClick="exitPressed"
            android:text="EXIT" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="2.07"
            android:gravity="end"
            android:orientation="horizontal"
            android:weightSum="6">

            <!-- TODO: icons for buttons -->
            <Button
                android:id="@+id/fbButton"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/twitterButton"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/rateButton"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:id="@+id/playFragment"
        android:name="com.example.thelkl321.angrymooseandroid.PlayFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <fragment
        android:id="@+id/optionsFragment"
        android:name="com.example.thelkl321.angrymooseandroid.OptionsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>


</RelativeLayout>
