...
        android:textSize="70sp"
        android:textStyle="bold" />

    <!-- TODO: page indicator?
         TODO: get rid of white ripple on edge -->
    <android.support.v4.view.ViewPager
        android:id="@+id/buttonPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        />

    <LinearLayout
...
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="helpPressed"/>

        <Button
            android:id="@+id/timeButton"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:text="Time Attack"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="35dp"
...
